100% in AlphaJudge for _01_CarShop