@@ -6,7 +6,7 @@ public class Animal {
     private String gender;
 
     public void setName(String name) {
-        if(name.trim().isEmpty()) {
+        if(name==null || name.isBlank()) {
             throw new IllegalArgumentException("Invalid input!");
         }
         this.name = name;
@@ -20,7 +20,7 @@ public class Animal {
     }
 
     public void setGender(String gender) {
-        if(gender.trim().isEmpty()) {
+        if(gender==null || gender.isBlank()) {
             throw new IllegalArgumentException("Invalid input!");
         }
         this.gender = gender;
@@ -45,15 +45,15 @@ public class Animal {
     }
 
     public String produceSound() {
-        return "Animal default sound...";
+        return null;
     }
 
     @Override
     public String toString() {
         StringBuilder stringBuilder = new StringBuilder();
         stringBuilder.append(this.getClass().getSimpleName()).append(System.lineSeparator());
-        stringBuilder.append(this.name).append(" ").append(this.age).append(" ").append(this.gender).append(System.lineSeparator());
-        stringBuilder.append(this.produceSound());
+        stringBuilder.append(getName()).append(" ").append(getAge()).append(" ").append(getGender()).append(System.lineSeparator());
+        stringBuilder.append(produceSound());
         return stringBuilder.toString();
     }
 }
